--- a/Forum/Pages/Thread.razor
+++ b/Forum/Pages/Thread.razor
@@ -5,6 +5,7 @@
 @inject IDbContextFactory<Model.Database> DbContext
 @inject NavigationManager NavMan
 @inject IJSRuntime iJsRuntime
+@inject EventService EventService 
 
 <div class="container-left" >
 	<div class="main row" >
@@ -24,12 +25,15 @@
 		<pre class="txt-title">@_content</pre>
 	</div>
 	<div class="second row">
-		<p class="p-annotation-sm txt-dark needs-space-lr">@_thread.Comments.Count Comments (@(_thread.Comments.Count / 20) Pages)</p>
+		@* Number of Pages, 20 Comments per Page
+		 * ( number_of_comments + comments_per_page - 1 ) / comments_per_page
+		 *@
+		<p class="p-annotation-sm txt-dark needs-space-lr">@_thread.Comments.Count Comments (@((_thread.Comments.Count + 19 ) / 20) Pages)</p>
 		<p @onclick="CopyLink" class="p-annotation-sm txt-dark needs-space-lr clickable shiny">@_copyLabel</p>
 		<p @onclick="SaveThread" class="p-annotation-sm txt-dark needs-space-lr clickable shiny">@(_saved ? "Saved!" : "Save")</p>
 	</div>
 	<div class="main">
-		<CommentField ThreadId="@_thread.Id"/>
+		<CommentField ThreadId="@_thread.Id" />
 	</div>
 	@foreach (Entity.Comment c in _comments)
 	{
@@ -73,6 +77,7 @@
 			.FirstOrDefault(t => t.Id == Id);
 
 		_comments = _thread.Comments.ToList();
+		EventService.ChangedEvent += (o, e) => InvokeAsync(() => Update());
 
 		var authenticationState = await authenticationStateTask;
 		Entity.User user = db.Users.Include(u => u.SavedThreads).First(u => u.AccountName == authenticationState.User.Identity.Name);
@@ -126,6 +131,23 @@
 		await db.SaveChangesAsync();
 
 		_saved = !_saved;
+		StateHasChanged();
+	}
+
+	private void Update()
+	{
+		using var db = DbContext.CreateDbContext();
+
+		_thread = db.Threads
+			.Include(t => t.Creator)
+			.Include(t => t.Forum)
+				.ThenInclude(f => f.Members)
+			.Include(t => t.Comments)
+				.ThenInclude(c => c.Creator)
+			.FirstOrDefault(t => t.Id == Id);
+
+		_comments = _thread.Comments.ToList();
+
 		StateHasChanged();
 	}
 }
