--- a/Forum/Components/CommentField.razor
+++ b/Forum/Components/CommentField.razor
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.EntityFrameworkCore
 @inject IDbContextFactory<Model.Database> DbContext
-@inject EventService EventService 
+@inject CommentService CommentService 
 
 <style>
 	.form-control {
@@ -65,6 +65,6 @@
 		_comment = null;
 		StateHasChanged();
 
-		EventService.UpdateStatus();
+		CommentService.RaiseCommentEvent();
 	}
 }
