--- a/Forum/Pages/Index.razor
+++ b/Forum/Pages/Index.razor
@@ -59,7 +59,7 @@
 				</div>
 			</div>
 			<div class="main row">
-				<input class="input-fg needs-padding" type="text" placeholder="Search @@User, #Tags or Posts" id="search_bar" />
+				<input id="search_bar" class="input-fg needs-padding" type="text" placeholder="Search @@User, #Tags or Posts" />
 			</div>
 			<div class="main needs-padding">
 				<TrendingNow />
