--- a/Forum/Pages/Login.razor
+++ b/Forum/Pages/Login.razor
@@ -17,7 +17,7 @@
 					<div class="row">
 						<button type="button" class="accent-red btn-bottom-left" @onclick="NavPwReset">Forgot Password</button>
 						<button type="button" class="accent-blue" @onclick="NavRegister">Create Account</button>
-						<button type="submit" class="accent-green btn-bottom-right" @onclick="SignIn">Log In</button>
+						<button type="submit" class="accent-green btn-bottom-right">Log In</button>
 					</div>
 				</div>
 			</form>
