fix(redirect_to_login): Only protected pages redirect to the login page and back.

--- a/Forum/App.razor
+++ b/Forum/App.razor
@@ -3,6 +3,7 @@
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
                 <NotAuthorized>
+                    @* Called on protected pages (those with `@attribute [Authorize]`) *@
                     <RedirectToLogin />
                 </NotAuthorized>
             </AuthorizeRouteView>
