--- a/Forum/Components/Comment.razor
+++ b/Forum/Components/Comment.razor
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.EntityFrameworkCore
 @inject IDbContextFactory<Model.Database> DbContext
 @inject CommentService CommentService
+@implements IDisposable
 
 <style>
 	.border-left {
@@ -23,7 +24,7 @@
 	<p class="p-annotation-sm">
 		@CommentModel.Creator.AccountName
 		@CommentModel.Created.ToString("t"), @CommentModel.Created.ToString("d")
-		<button class="btn-mini" @onclick="Collapse">[x]</button> @*▬*@
+		<button class="btn-mini" @onclick="Collapse">[-]</button> @*▬*@
 	</p>
 	<span>
 		<pre class="txt-title">@CommentModel.Text</pre>
@@ -86,5 +87,10 @@
 		_cfClass = "hidden";
 
 		InvokeAsync(() => StateHasChanged());
+	}
+
+	public void Dispose()
+	{
+		CommentService.CommentEvent -= Update;
 	}
 }
